fix: 移除用户账号表
